updating sizes fo rotating bg images and default space bg images to avoid dead space and stretching of imgs

--- a/src/assets/styles/_spaces.scss
+++ b/src/assets/styles/_spaces.scss
@@ -33,8 +33,6 @@
         &.ws-default-room-bg img {
           position: relative;
           max-width: initial;
-          min-width: 100%;
-          min-height: 100%;
           height: 100%;
           width: auto;
           left: 50%;
@@ -129,6 +127,7 @@
         right: 0;
         transition: bottom 0.5s ease-out, opacity 0.5s linear;
         z-index: 0;
+        pointer-events: all;
 
         &.slide-in {
           bottom: 40px;
@@ -205,6 +204,7 @@
         right: 0;
         transition: bottom 0.5s ease-out, opacity 0.5s linear;
         z-index: 0;
+        pointer-events: all;
 
         &.slide-in {
           bottom: 35px;
